# num-sol-ws2526

./: .gitignore  .gitmodules  .nojekyll  CMakeLists.txt  Makefile  README.md  _quarto.yml  index.html  index.qmd  intro.html  references.html  search.json  summary.html
.github/workflows/: build.yml
src/: CMakeLists.txt
src/ub00/: CMakeLists.txt  minimal_hdnum.cpp  new.cpp  ub0_task1.cpp
src/ub01/: CMakeLists.txt  aufgabe3  aufgabe3.cpp  ub1_task1.cpp  ub3.cpp
src/ub02/: aufgabe4  aufgabe4.cpp
src/ub04/: rohrleitungsnetzwerk  rohrleitungsnetzwerk.cc
src/ub06/: CMakeLists.txt
src/ub08/: CMakeLists.txt  prog_iterative_solvers  prog_iterative_solvers.cc
theory/ub01/: a1.html  a1.qmd  a2.qmd  a3.html  a3.qmd
theory/ub02/: a3.qmd
theory/ub03/: a2.qmd
